terraform/mydb1-main.tf
resource "aws_db_instance" "mydb1" {
      identifier              = "mydb1-instance"
      allocated_storage       = 20
      engine                  = "postgres"
      engine_version          = "15.4"
      instance_class          = "db.t3.medium"
      db_name                 = "mydb1"
      username                = "admin"
      password                = jsondecode(data.aws_secretsmanager_secret_version.db_password.secret_string)["rds-master-password"]
      skip_final_snapshot     = true
      publicly_accessible     = true

      tags = {
        Name        = "mydb1-instance"
        Environment = "prod"
      }
    }
